# a2a-agent

./: Makefile  README.md  agent_test.py  fasta2a_client.py  mcp_server.py  pyproject.toml  server_mcp.py  server_simple.py  telegram_client.py  wrong_client.py
.github/workflows/: test.yml
tests/: test_telegram_client.py
